# Operating-System

./: READ.md  README.md  Vagrantfile
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
hw1-student/: .gitignore  Makefile
hw1-student/gtest/include/gtest/internal/: gtest-tuple.h.gch
hw1-student/src/: llist.cpp  llist.h  main.cpp
hw1-student/test/: llist_tests.cpp
lab0-student/: CMakeLists.txt  Makefile  foo1.txt  foo2.txt  foo3.txt  inputs.txt  inverter  inverter_tests
lab0-student/gtest/include/gtest/: gtest_prod.h.gch
lab0-student/gtest/include/gtest/internal/: gtest-port-arch.h.gch
lab0-student/src/: inverter.cpp  inverter.h  main.cpp
lab0-student/test/: inverter_tests.cpp
